@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Hide subfolder creation option in dynamic view if IMAP server indicates that child mailboxes cannot be created.
 * [mms] Correctly send deleted flag information to browser cache when using dynamic/smartmobile view (Bug #11362).
 * [mms] Auto-update folders list in smartmobile view if special mailbox is auto-created (Request #11482).
 * [mms] Load folders list on-demand in smartmobile view.
@@ -2763,6 +2764,7 @@
    <date>2012-10-12</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mms] Hide subfolder creation option in dynamic view if IMAP server indicates that child mailboxes cannot be created.
 * [mms] Correctly send deleted flag information to browser cache when using dynamic/smartmobile view (Bug #11362).
 * [mms] Auto-update folders list in smartmobile view if special mailbox is auto-created (Request #11482).
 * [mms] Load folders list on-demand in smartmobile view.
